--- a/hobby.html
+++ b/hobby.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang='de'>
+<html lang="de">
   <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
     <title>Mein Profil</title>
   </head>
   <body>
@@ -14,7 +14,7 @@
         <ul>
           <li>Lesen</li>
           <li>Angeln</li>
-          <li>Programmieren</li>
+          <li>Programmieren, Schlagzeug</li>
         </ul>
 
     </main>
