--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <main>
       <nav>
-        <a href='index.html' title='Start'>Start</a>
-        <a href='hobby.html' title='Hobbys'>Hobbys</a>
+        <a href="index.html" title="Start">Start</a>
+        <a href="hobby.html" title="Hobbys">Hobbys</a>
       </nav>
     <h1>Ghwalin's Profil</h1>
       <div>
